# SimpleMatrix

./: .gitignore  Axis.h  CMakeLists.txt  MatrixCalc.pro  main.cpp  mainwindow.cpp  mainwindow.h  matrix.cpp  matrix.h  matrixexception.h  vector.cpp  vector.h
Tests/: catch_test.cpp  debugtoolbox.h  testmain.cpp  timetests.cpp
Tests/Matrix/: add_test.cpp  assign_test.cpp  compare_test.cpp  creation_test.cpp  determinant_test.cpp  invert_test.cpp  matrix_creation_test.cpp  multiply_test.cpp  reverse_elements_test.cpp  rotate_test.cpp  subtract_test.cpp  transpose_test.cpp
Tests/Vector/: v_abs_test.cpp  v_add_test.cpp  v_assign_test.cpp  v_compare_test.cpp  v_creation_test.cpp  v_get_test.cpp  v_is_column_test.cpp  v_make_negative.cpp  v_mul_test.cpp  v_size_test.cpp  v_sub_test.cpp  v_test_from_matrix.cpp
Widgets/: matrixinputwidget.cpp  matrixinputwidget.h
